# MLIR-Toy

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/include/toy/: CMakeLists.txt
example/parser/: CMakeLists.txt
example/toy/: CMakeLists.txt
src/: CMakeLists.txt  toyc.cpp
src/include/toy/: Dialect.h  Ops.td
src/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ToyCombine.cpp
tests/: transpose_transpose.toy  trivial_reshape.toy
tests/ch1/: ast.toy
